Initial pass to get DataTables to play nicely. May or may not work from end to end (I don't recall) but this commit exists so I can push it to bitbucket.

--- a/clic/web/templates/concordance-results.html
+++ b/clic/web/templates/concordance-results.html
@@ -68,10 +68,13 @@
 
   <script src="/js/thirdparty/DataTables1.10.0-beta.2/media/js/jquery.dataTables.min.js"></script>
   <script src="/js/thirdparty/DataTables1.10.0-beta.2/extensions/TableTools/js/dataTables.tableTools.min.js"></script>
+  <script src="https://cdn.datatables.net/plug-ins/1.10.7/pagination/four_button.js"></script>
   <!-- datatables bootstrap js (css is above) see http://next.datatables.net/manual/styling/bootstrap -->
   <script src="/js/thirdparty/DataTables1.10.0-beta.2/media/js/dataTables.bootstrap.js"></script>
 
-  <script src="/js/datatables.concordance.sort.js"></script>
+  <!-- <script src="/js/datatables.concordance.sort.js"></script> -->
+  <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
   <script src="/js/clic.concordance.js"></script>
 
   <script>
