--- a/clic/web/templates/concordance-form.html
+++ b/clic/web/templates/concordance-form.html
@@ -69,6 +69,8 @@
                 </label>
             </div>
 
+            <input type="hidden" name="pageSize" value="10" />
+            <input type="hidden" name="pageNumber" value="1" />
             <button type="submit" class="btn btn-primary pull-right">Search</button>
 
         </div>
